@@ -3,6 +3,16 @@ TOPDIR=..
 endif
 include $(TOPDIR)/Makefile.global
 
+# Note:
+# Although dbpasswords.secret and htpasswd-jury are generated during
+# building/installing, we only remove them with 'distclean', for in
+# maintainer-install mode it's inconvenient to have these regenerated
+# with different passwords from those in the database.
+#
+# These files should probably not be generated in the source tree
+# anyways, but it is more convenient to be able to share the passwords
+# between domserver and judgehost installs.
+
 SUBST_CONFIGS = apache.conf domserver-static.php domserver-static.h \
                 judgehost-static.php runguard-config.h submit-config.h
 
@@ -23,7 +33,7 @@ dbpasswords.secret:
 htpasswd-jury: dbpasswords.secret
 	touch $@
 	chmod go= $@
-	htpasswd -b $@ domjudge_jury `grep '^jury:' $< | cut -d : -f 5`
+	$(HTPASSWD) -b $@ domjudge_jury `grep '^jury:' $< | cut -d : -f 5`
 
 install-domserver:
 	$(INSTALL_DATA) -t $(DESTDIR)$(domserver_etcdir) \
@@ -44,7 +54,8 @@ install-judgehost:
 		dbpasswords.secret
 
 distclean-l:
-	-rm -f $(SUBST_CONFIGS)
+	-rm -f $(SUBST_CONFIGS) config.h \
+		dbpasswords.secret htpasswd-jury
 
 maintainer-clean-l:
 	-rm -f etc/config.h.in
