@@ -38,6 +38,9 @@ CURL_CFLAGS = @CURL_CFLAGS@
 CURL_LIBS   = @CURL_LIBS@
 CURL_PREFIX = @CURL_PREFIX@
 
+# htpasswd
+HTPASSWD = @HTPASSWD@
+
 # User:group file ownership of password files
 DOMJUDGE_USER   = @DOMJUDGE_USER@
 WEBSERVER_GROUP = @WEBSERVER_GROUP@
