@@ -31,7 +31,7 @@ GRANT SELECT (judgingid, submitid, result, valid)        ON judging    TO domjud
 GRANT SELECT (probid, name, cid, allow_submit, color)    ON problem    TO domjudge_public, domjudge_plugin;
 GRANT SELECT (submitid, cid, probid, teamid, submittime) ON submission TO domjudge_public, domjudge_plugin;
 
-GRANT SELECT (langid, name, extension, allow_submit)     ON language   TO domjudge_team;
+GRANT SELECT (langid, name, extension, allow_submit)     ON language   TO domjudge_team, domjudge_plugin;
 GRANT SELECT (probid, name, cid, allow_submit, color)    ON problem    TO domjudge_team;
 
 -- Team write privileges
